Fixed some bugs

--- a/Vocabulary Translator App.csproj
+++ b/Vocabulary Translator App.csproj
@@ -17,12 +17,12 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>Vocabulary Translator App_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>Vocabulary Translator App_StoreKey.pfx</PackageCertificateKeyFile>
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxPackageDir>C:\Users\DoPracy\Desktop\</AppxPackageDir>
     <AppxBundle>Auto</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
-    <PackageCertificateThumbprint>51BBA59DC89247201B6D12232D78D80624D2976B</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>9667D8E5152BBFCEBCF201D34AFD54231E185B63</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -103,20 +103,20 @@
     <Compile Include="Class\DatabaseConnection.cs" />
     <Compile Include="Class\GTranslator.cs" />
     <Compile Include="Class\StringOperation.cs" />
-    <Compile Include="ExportToCSV.xaml.cs">
+    <Compile Include="Pages\ExportToCSV.xaml.cs">
       <DependentUpon>ExportToCSV.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MyDictionaries.xaml.cs">
+    <Compile Include="Pages\MyDictionaries.xaml.cs">
       <DependentUpon>MyDictionaries.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TopWords.xaml.cs">
+    <Compile Include="Pages\TopWords.xaml.cs">
       <DependentUpon>TopWords.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Translate.xaml.cs">
+    <Compile Include="Pages\Translate.xaml.cs">
       <DependentUpon>Translate.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -124,6 +124,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="Vocabulary Translator App_StoreKey.pfx" />
     <None Include="Vocabulary Translator App_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +167,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-125.png" />
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <None Include="Package.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -179,23 +181,23 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="ExportToCSV.xaml">
+    <Page Include="Pages\ExportToCSV.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainPage.xaml">
+    <Page Include="Pages\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="MyDictionaries.xaml">
+    <Page Include="Pages\MyDictionaries.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TopWords.xaml">
+    <Page Include="Pages\TopWords.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Translate.xaml">
+    <Page Include="Pages\Translate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
